# noctalia-shell

./: .clang-tidy  example.toml  meson.build
.github/workflows/: label-issue-metadata.yml  mirror-codeberg.yml
assets/translations/: en.json
src/app/: application.cpp  application.h  main_loop.cpp
src/capture/: screenshot_region_overlay.cpp  screenshot_service.cpp  screenshot_service.h
src/compositors/dwl/: dwl_workspace_backend.cpp  dwl_workspace_backend.h
src/compositors/triad/: triad_workspace_backend.cpp
src/config/: config_export.cpp  config_overrides.cpp  config_service.cpp  config_types.cpp  config_types.h
src/config/schema/: config_schema.cpp  config_schema.h
src/dbus/tray/: tray_service.cpp
src/ipc/: ipc_client.cpp
src/launcher/: emoji_provider.cpp  launcher_provider.h  plugin_launcher_provider.cpp  plugin_launcher_provider.h
src/pipewire/: pipewire_service.cpp
src/render/text/: cairo_text_renderer.cpp
src/scripting/: plugin_bindings.cpp  plugin_catalog.cpp  plugin_manager.cpp  plugin_manager.h  plugin_source_locks.cpp  plugin_source_locks.h  script_runtime_types.h
src/shell/bar/: bar.cpp  widget_factory.cpp
src/shell/bar/widgets/: active_window_widget.cpp  active_window_widget.h  battery_widget.cpp  keyboard_layout_widget.cpp  keyboard_layout_widget.h  scripted_widget.cpp  sysmon_widget.cpp  sysmon_widget.h  tray_widget.cpp
src/shell/control_center/: audio_tab.cpp  calendar_tab.cpp  calendar_tab.h  control_center_panel.cpp  weather_tab.cpp
src/shell/desktop/widgets/: desktop_clock_widget.cpp  desktop_clock_widget.h  desktop_fancy_audio_visualizer_widget.cpp
src/shell/launcher/: launcher_panel.cpp  launcher_panel.h
src/shell/lockscreen/: lock_screen.cpp  lockscreen_widgets_host.cpp
src/shell/notification/: notification_toast.cpp  notification_toast.h
src/shell/osd/: media_osd.cpp
src/shell/panel/: panel_manager.cpp  panel_manager.h
src/shell/polkit/: polkit_panel.cpp
src/shell/settings/: bar_widget_editor.cpp  bar_widget_editor.h  settings_content.cpp  settings_content.h  settings_registry.cpp  settings_window.cpp  settings_window.h  settings_window_popups.cpp  settings_window_scene.cpp  widget_settings_registry.cpp
src/shell/tooltip/: tooltip_manager.cpp  tooltip_manager.h
src/system/: brightness_service.cpp  day_night_schedule.cpp  day_night_schedule.h  desktop_entry.cpp  gamma_service.cpp  gamma_service.h  hardware_info.cpp  location_poll_source.h  location_service.cpp  location_service.h  rfkill_helper.cpp  weather_service.cpp  weather_service.h
src/theme/: cli.cpp  template_apply_service.cpp  template_engine.cpp
src/ui/: builders.cpp  builders.h
src/ui/controls/: box.cpp  box.h  input.cpp  input.h  label.cpp  progress_bar.cpp  progress_bar.h  stepper.cpp
src/ui/dialogs/: dialog_popup_host.cpp
src/util/: file_utils.h
src/wayland/: clipboard_service.cpp  layer_surface.cpp  popup_surface.cpp  surface.cpp  surface.h  wayland_connection.cpp  wayland_workspaces.cpp
tests/: config_path_resolution_test.cpp  plugin_source_locks_test.cpp
tools/: notifications-test.sh
